force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This is a field to mark a contact for deletion.  We wanted this to be a picklist to keep it consistent with the Lead and Account objects.</description>
    <inlineHelpText>Select &quot;Delete Contact&quot; to have this record permanently deleted from Salesforce.com by the Admin team.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delete Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>