force-app/main/default/objects/Contact/fields/Survey_Count__c.field-meta.xml
<CustomField>
    <fullName>Survey_Count__c</fullName>
    <description>Holds the count of the number of surveys that have been sent to a contact in a 12 month period.</description>
    <inlineHelpText>This is a calculated field.</inlineHelpText>
    <label>Survey Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>