force-app/main/default/objects/Contact/fields/Survey_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Survey_Threshold__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Indicates the number of surveys that can be sent to a contact in a 12 month period.</description>
    <label>Survey Threshold</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>