force-app/main/default/objects/Contact/fields/Survey_Threshold_Reached__c.field-meta.xml
<CustomField>
    <fullName>Survey_Threshold_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field gets checked to TRUE when the survey threshold value has been reached for the number of surveys sent out in a 12 month period.</description>
    <label>Survey Threshold Reached</label>
    <type>Checkbox</type>
</CustomField>