force-app/main/default/objects/Contact/fields/tdc_tvte__accept_all__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__accept_all__c</fullName>
    <defaultValue>false</defaultValue>
    <label>accept all</label>
    <type>Checkbox</type>
</CustomField>