force-app/main/default/objects/Contact/fields/tdc_tvte__email__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__email__c</fullName>
    <label>email</label>
    <type>Email</type>
</CustomField>