force-app/main/default/objects/Contact/fields/tdc_tvte__free__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>free</label>
    <type>Checkbox</type>
</CustomField>