force-app/main/default/objects/Contact/fields/tdc_tvte__message__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__message__c</fullName>
    <label>message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>