force-app/main/default/objects/Contact/fields/tdc_tvte__StatusOfEmailVerification__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__StatusOfEmailVerification__c</fullName>
    <formula>IF(tdc_tvte__success__c == true, 
CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Deliverable.png&apos;, &apos;Deliverable&apos;), &apos;risky&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Risky.png&apos;, &apos;risky&apos;),
&apos;undeliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Undeliverable.png&apos;, &apos;Not Deliverable&apos;), &apos;unknown&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Unknown.png&apos;, &apos;Unknown&apos;),tdc_tvte__Result__c) 
, IMAGE(&apos;/resource/tdc_tvte__Verified/Notverified.png&apos;, &apos;Not Verified Yet&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Of Email Verification</label>
    <type>Text</type>
</CustomField>