force-app/main/default/objects/Contact/fields/Telemarketing_Alert_Code__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Alert_Code__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Alert Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISM to Call Immediately</fullName>
            </value>
            <value>
                <fullName>ISM to Follow up in 1 Month</fullName>
            </value>
            <value>
                <fullName>ISM to Follow up in 2 Weeks</fullName>
            </value>
            <value>
                <fullName>See Notes in Eloqua Prior to Calling</fullName>
            </value>
            <value>
                <fullName>Do Not Call Customer at this Time</fullName>
            </value>
            <value>
                <fullName>See Notes in Salesforce Prior to Calling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>