force-app/main/default/objects/Contact/fields/Telemarketing_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Lead_Type__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Lead Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>