force-app/main/default/objects/Contact/fields/Telemarketing_Rep_Comments__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Rep_Comments__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>