force-app/main/default/objects/Contact/fields/TEMP_DEDUPE_SUMMARIZED__c.field-meta.xml
<CustomField>
    <fullName>TEMP_DEDUPE_SUMMARIZED__c</fullName>
    <formula>FirstName + &quot;_&quot; + LastName + &quot;_&quot; + Email</formula>
    <label>(TEMP) - DEDUPE SUMMARIZED</label>
    <type>Text</type>
</CustomField>