force-app/main/default/objects/Contact/fields/Truck_Run_Calendar_Color__c.field-meta.xml
<CustomField>
    <fullName>Truck_Run_Calendar_Color__c</fullName>
    <description>Determines the color assigned to the driver&apos;s truck runs on the truck run calendar.</description>
    <inlineHelpText>Select the color you would like the appointments on the truck run calendar to show as for the driver.</inlineHelpText>
    <label>Truck Run Calendar Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>indigo</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Violet</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>