force-app/main/default/objects/Contact/fields/Video_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Video_Address_Name__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <inlineHelpText>Enter Video Address Names on separate lines.  Example: Skype Name</inlineHelpText>
    <label>Video Address Name</label>
    <type>TextArea</type>
</CustomField>