force-app/main/default/objects/Contact/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <inlineHelpText>Enter the URL (including &apos;www&apos;) for this Contact&apos;s Website</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>