force-app/main/default/objects/Contact/fields/Website_Comments__c.field-meta.xml
<CustomField>
    <fullName>Website_Comments__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Website Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>