force-app/main/default/objects/Contact/fields/White_Paper_Metgaurd__c.field-meta.xml
<CustomField>
    <fullName>White_Paper_Metgaurd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eloqua Integrated</description>
    <label>White Paper - Metgaurd</label>
    <type>Checkbox</type>
</CustomField>