force-app/main/default/objects/Contact/fields/Who_is_Your_Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Who_is_Your_Current_Supplier__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Who is Your Current Supplier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>