force-app/main/default/objects/Contact/recordTypes/Agency_Contact.recordType-meta.xml
<RecordType>
    <fullName>Agency_Contact</fullName>
    <active>true</active>
    <description>Agency Contacts</description>
    <label>Agency Contact</label>
</RecordType>