force-app/main/default/objects/Contact/recordTypes/Americas_Outfitters_B2B_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Americas_Outfitters_B2B_Contacts</fullName>
    <active>true</active>
    <description>B2B - Americas Outfitters - North America and Latin America Contacts</description>
    <label>Americas Outfitters (B2B) Contacts</label>
</RecordType>