force-app/main/default/objects/Contact/recordTypes/Business_Development.recordType-meta.xml
<RecordType>
    <fullName>Business_Development</fullName>
    <active>true</active>
    <description>This is the business development record type.</description>
    <label>Business Development</label>
</RecordType>