force-app/main/default/objects/Contact/recordTypes/Business_Partner.recordType-meta.xml
<RecordType>
    <fullName>Business_Partner</fullName>
    <active>true</active>
    <description>Record Type for Industrial Account Contacts</description>
    <label>Business Partner</label>
</RecordType>