force-app/main/default/objects/Contact/recordTypes/General_Contact.recordType-meta.xml
<RecordType>
    <fullName>General_Contact</fullName>
    <active>true</active>
    <description>Used by all users to create new Contacts that are not integrated with M3</description>
    <label>General Contact</label>
</RecordType>