force-app/main/default/objects/Contact/recordTypes/M3_Contact.recordType-meta.xml
<RecordType>
    <fullName>M3_Contact</fullName>
    <active>true</active>
    <description>For Contacts integrated with M3; most fields are read/only</description>
    <label>M3 Contact</label>
</RecordType>