force-app/main/default/objects/Contact/recordTypes/Partner_Community_Users.recordType-meta.xml
<RecordType>
    <fullName>Partner_Community_Users</fullName>
    <active>true</active>
    <description>Partner Community Contacts connected to Community User License</description>
    <label>Partner Community Users</label>
</RecordType>