force-app/main/default/objects/Contact/validationRules/Contact_Alert_requires_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Alert_requires_Notes</fullName>
    <active>true</active>
    <description>When the Contact Alert flag is activtated (via the Contact Alert Active field), information must be entered in the Contact Alert Notes field</description>
    <errorConditionFormula>AND(
          ISBLANK(Contact_Alert_Notes__c),
          Contact_Alert_Active__c  = True
        )</errorConditionFormula>
    <errorDisplayField>Contact_Alert_Notes__c</errorDisplayField>
    <errorMessage>When the Contact Alert Active box is checked, information on how to handle the Contact must be included in the Contact Alert Notes field.</errorMessage>
</ValidationRule>