force-app/main/default/objects/Contact/validationRules/Contact_MSTS_User_Halt.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_MSTS_User_Halt</fullName>
    <active>false</active>
    <description>Prevent the ability to change the RWBAA User Type if the Contact is not the Primary Contact or is using a Red Wing Shoes email address.</description>
    <errorConditionFormula>CONTAINS(LOWER(Email),&apos;@redwingshoes.com&apos;)</errorConditionFormula>
    <errorMessage>RWBAA User Type cannot be selected if the Contact is not the Primary Contact or is using a Red Wing Shoes email address.</errorMessage>
</ValidationRule>