force-app/main/default/objects/Contact/validationRules/Contact_Same_As_Account_Billing_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Same_As_Account_Billing_Address</fullName>
    <active>true</active>
    <description>Validates that when a Contact attempts to use the Accounts RWfB Billing address, that the minimum fields on that Address block are populated.</description>
    <errorConditionFormula>AND( 
isPickVal(Address_same_as_Accounts__c , &apos;Billing&apos;),
OR(
isBlank(Account.RWfB_Billing_Address_City__c), 
isBlank(Text(Account.RWfB_Billing_Address_Country__c)), 
isBlank(Account.RWfB_Billing_Address_Line_1__c), 
isBlank(Text(Account.RWfB_Billing_Address_State_Province__c)), 
isBlank(Account.RWfB_Billing_Address_ZIP_Postal_Code__c)
))</errorConditionFormula>
    <errorMessage>The selected Account Address does not include a complete Address. Please select a different Account Address or select Different.</errorMessage>
</ValidationRule>