force-app/main/default/objects/Contact/validationRules/Contact_Same_As_Account_Physical_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Same_As_Account_Physical_Address</fullName>
    <active>true</active>
    <description>Validates that when a Contact attempts to use the Accounts IA Physical address, that the minimum fields on that Address block are populated.</description>
    <errorConditionFormula>AND( 
isPickVal(Address_same_as_Accounts__c , &apos;Physical&apos;),
OR(
isBlank(Account.IA_Physical_Location_Address_Line_1__c), 
isBlank(Account.IA_Physical_Location_City__c), 
isBlank(Text(Account.IA_Physical_Location_State_Province__c )), 
isBlank(Account.IA_Physical_Location_ZIP_Postal_Code__c), 
isBlank(Text(Account.IA_Physical_Location_Country__c))
))</errorConditionFormula>
    <errorMessage>The selected Account Address does not include a complete Address. Please select a different Account Address or select Different.</errorMessage>
</ValidationRule>