force-app/main/default/objects/Contact/validationRules/M3_Contact_cannot_be_created.validationRule-meta.xml
<ValidationRule>
    <fullName>M3_Contact_cannot_be_created</fullName>
    <active>true</active>
    <description>Restricts new M3 Contact from being created by any user other than CastIron</description>
    <errorConditionFormula>AND( 
         ISNEW(), 
         $Profile.Name &lt;&gt; &quot;Cast Iron Integration&quot;, 
         $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
         RecordTypeId = &quot;012F0000000qHdq&quot;
 )</errorConditionFormula>
    <errorMessage>M3 Contacts cannot be created within Salesforce. They are populated from M3/Movex data only.</errorMessage>
</ValidationRule>