force-app/main/default/objects/Contact/listViews/All_Industrial_Account_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Industrial_Account_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Role__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Account_record_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.General_Contact</value>
    </filters>
    <filters>
        <field>Account_record_type__c</field>
        <operation>startsWith</operation>
        <value>Industrial</value>
    </filters>
    <label>All Industrial Account Contacts</label>
    <sharedTo>
        <group>ISM_Industrial_Sales_Managers</group>
        <group>ISM_TSM</group>
        <group>National_Account_Specialists</group>
        <group>National_Accounts</group>
    </sharedTo>
</ListView>