force-app/main/default/objects/Contact/listViews/Angie_s_Billing_Contacts.listView-meta.xml
<ListView>
    <fullName>Angie_s_Billing_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Role__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Angie</value>
    </filters>
    <label>Angie&apos;s Billing Contacts</label>
    <sharedTo>
        <group>National_Accounts_Administrators</group>
    </sharedTo>
</ListView>